[gd_scene load_steps=13 format=3 uid="uid://dmkr1ekt50ipg"]

[ext_resource type="Script" uid="uid://cmsq7sca4e1y5" path="res://scripts/characters/enemy.gd" id="1_vwwgd"]
[ext_resource type="Material" uid="uid://bn1hjxmvdaayl" path="res://shaders/whiten.tres" id="2_r6pwp"]
[ext_resource type="Texture2D" uid="uid://cqm0xt8oh2r7o" path="res://assets/sprites/caracters/enemy/leather-sword.png" id="3_vwwgd"]
[ext_resource type="Texture2D" uid="uid://fbu6qdxrj8ml" path="res://assets/sprites/caracters/player/drone_shadow.png" id="4_cp1m7"]
[ext_resource type="PackedScene" uid="uid://bkv3ght6juqyi" path="res://scenes/utils/hurt_box.tscn" id="5_aovnm"]
[ext_resource type="PackedScene" uid="uid://baxcr56ohgr1l" path="res://scenes/utils/drop_item.tscn" id="6_0m6vl"]
[ext_resource type="PackedScene" uid="uid://hpg7md76r7e6" path="res://scenes/itens/blue_gem.tscn" id="7_0y7wp"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_80nil"]
radius = 4.0
height = 11.0

[sub_resource type="Animation" id="Animation_80nil"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_prdsq"]
resource_name = "moving"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -4), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l80s2"]
_data = {
&"RESET": SubResource("Animation_80nil"),
&"moving": SubResource("Animation_prdsq")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e0y14"]
radius = 9.166666
height = 26.0

[node name="TigerSickle" type="CharacterBody2D" groups=["enemies"]]
z_index = 1
y_sort_enabled = true
collision_layer = 4
collision_mask = 7
motion_mode = 1
platform_floor_layers = 4294967294
script = ExtResource("1_vwwgd")
health = 24.0
speed = 2400.0
attack_damage = -10.0
knockback_time_max = 0.5

[node name="Sprite2D" type="Sprite2D" parent="."]
material = ExtResource("2_r6pwp")
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_vwwgd")

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(0, 4)
scale = Vector2(1.7, 1.7)
texture = ExtResource("4_cp1m7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2(2, 2)
shape = SubResource("CapsuleShape2D_80nil")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_l80s2")
}
speed_scale = 2.0

[node name="HurtBox" parent="." instance=ExtResource("5_aovnm")]
scale = Vector2(1.2, 1.2)
collision_mask = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
scale = Vector2(0.8, 0.8)
shape = SubResource("CapsuleShape2D_e0y14")

[node name="DropItem" parent="." instance=ExtResource("6_0m6vl")]
item_drop = Array[PackedScene]([ExtResource("7_0y7wp"), null])
item_drop_chance = Array[float]([60.0, 40.0])

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]

[editable path="HurtBox"]
